--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,6 +30,9 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  helpers:
+    submit:
+      create: "Completar Criação "
+      update: "Completar Edição"
 
   
