traduzido algumas frases...

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,6 @@ en:
   helpers:
     submit:
       create: "Completar Criação "
-      update: "Completar Edição"
+      update: "Aplicar Atualizações"
 
   
